add new coments, link to repo and conclusions

--- a/Projeto Final_v2.ipynb
+++ b/Projeto Final_v2.ipynb
@@ -29,7 +29,9 @@
    "metadata": {},
    "source": [
     "# Descrição do dataset\n",
-    "Os dados a serem utilizados no projeto são provenientes de um estudo realizado em pacientes infectados por COVID-19 (doi.org/10.1080/20002297.2022.2043651). Neste estudo, o nível de proteínas em amostras de soro de pacientes internados e não internados por COVID-19 foram avaliados, portanto, o dataset consiste em uma série de features que correspondem a proteínas identificadas e um valor de intensidade da sua medida para cada paciente. A proposta do projeto é utilizar este dataset para treinar modelos para classificar os pacientes em alto risco (internados) ou baixo risco (não internados) baseado nos valores de intensidade das proteínas identificadas. São no total 132 amostras para treinamento/validação e 64 amostras para teste. Ambos os datasets (treino e teste) estão desbalanceados. O objetivo é melhorar o que foi feito no estudo publicado, visando aumentar a performance de classificação no dataset de teste."
+    "Os dados a serem utilizados no projeto são provenientes de um estudo realizado em pacientes infectados por COVID-19 (doi.org/10.1080/20002297.2022.2043651). Neste estudo, o nível de proteínas em amostras de soro de pacientes internados e não internados por COVID-19 foram avaliados, portanto, o dataset consiste em uma série de features que correspondem a proteínas identificadas e um valor de intensidade da sua medida para cada paciente. A proposta do projeto é utilizar este dataset para treinar modelos para classificar os pacientes em alto risco (internados) ou baixo risco (não internados) baseado nos valores de intensidade das proteínas identificadas. São no total 132 amostras para treinamento/validação e 64 amostras para teste. Ambos os datasets (treino e teste) estão desbalanceados. O objetivo é melhorar o que foi feito no estudo publicado, visando aumentar a performance de classificação no dataset de teste.\n",
+    "\n",
+    "Dado que estaremos utilizando um dataset não público e que foi utilizado por um integrante do grupo em um projeto de pesquisa anterior, este trabalho se trata de um projeto de ***tipo 2***."
    ]
   },
   {
@@ -5694,6 +5696,14 @@
     "plt.grid()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cacdaa0",
+   "metadata": {},
+   "source": [
+    "Nesta visualização estão sendo comparados os valores médios de concentração das proteínas para cada uma das labels. Pode-se observar que existem algumas diferenças notáveis entre os valores dos dois gráficos e é esperado que essa informação auxilie o modelo em suas predições."
    ]
   },
   {
@@ -26141,6 +26151,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a96b0826",
+   "metadata": {},
+   "source": [
+    "Em relação à implementação da Análise Exploratória:\n",
+    "\n",
+    "- Para a manipulação dos dados e cálculos gerais foram utilizadas as bibliotecas amplamente conhecidas e aplicadas em projetos de ML **pandas** e **numpy**, que foram escolhidas muito devido a sua eficácia e por ser de conhecimento comum entre os integrantes do grupo\n",
+    "\n",
+    "\n",
+    "- Para a visualização de dados estão sendo utilizadas as bibliotecas **matplotlib** - para plots que necessitam de mais flexibilidade e possibilidade de alterar parâmetros - e **seaborn** - pois costuma gerar uma visualização mais agradável visualmente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1bb79aca",
    "metadata": {},
    "source": [
@@ -26154,7 +26177,9 @@
    "source": [
     "# Observações Importantes:\n",
     "O Grupo testou várias configurações de pré-processamentos, feature engine, otimização de hiperparâmetros e algoritmos para a modelagem. <br>\n",
-    "Nem todos os testes efetuados estão no presente notebook, por isso, deixamos o link utilizado no GitHub para que, caso seja de interesse, verifique todos os passos e procedimentos que adotamos ao longo do projeto."
+    "Nem todos os testes efetuados estão no presente notebook, por isso, deixamos o link utilizado no GitHub para que, caso seja de interesse, verifique todos os passos e procedimentos que adotamos ao longo do projeto.\n",
+    "\n",
+    "https://github.com/LCLazari/MAC5832_prognostico_covid/tree/LCLazari-only-normalized"
    ]
   },
   {
@@ -26476,7 +26501,9 @@
     "# Boruta\n",
     "### Como nosso dataset possui muitas colunas, utilizamos da biblioteca Boruta para encontrar as features mais relevantes de nossa base\n",
     "\n",
-    "https://github.com/scikit-learn-contrib/boruta_py"
+    "https://github.com/scikit-learn-contrib/boruta_py\n",
+    "\n",
+    "Como a ideia por trás do algoritmo do Boruta é comparar o poder preditivo de cada uma das features contra suas permutações aleatórias por várias iterações, isso nos possibilita remover do dataset características que iriam adicionar ruído ao modelo e dificultar a predição. "
    ]
   },
   {
@@ -27396,7 +27423,7 @@
    "id": "2f3e7914",
    "metadata": {},
    "source": [
-    "### Conseguimos um resultado de 0.8613 nos dados de validação utilizando o Optuna para busca de hiperparâmetros.\n",
+    "### Conseguimos um resultado de 0.8541 nos dados de validação utilizando o Optuna para busca de hiperparâmetros.\n",
     "### Agora como último passo iremos prever os dados de teste com o novo modelo treinado"
    ]
   },
@@ -27508,7 +27535,28 @@
    "id": "cc0d5924",
    "metadata": {},
    "source": [
-    "# Conclusão:"
+    "# Conclusões:\n",
+    "\n",
+    "\n",
+    "- Primeiramente, é bastante importate mencionar que foi possível melhorar a performance baseline do projeto (Acurácia dataset independente Artigo: **67.18%** - Acurácia set de teste Projeto: **79.68%**) com a utilização de técnicas de feature selection, otimização de hiper parâmetros e boosting\n",
+    "\n",
+    "\n",
+    "- A análise exploratória dos dados foi de grande importância, pois a partir da observação das distribuições de features e análises da relação entre elas, foi possível estabelecer um pipeline de tratamento dos dados adequado para o dataset utilizado e também direcionar a seleção de ferramentas e técnicas para atingir a melhor peformance neste conunto de dados\n",
+    "\n",
+    "\n",
+    "- Como o tamanho do dataset é bastante reduzido, foi substancial a utilização da técnica de **validação cruzada** para seleção de features, busca de melhores hiper parâmetros e comparação entre soluções. Neste projeto optamos pelo método **RepeatedKFold** porque, desta forma, foi possível realizar repetidas avaliações em folds diferentes para uma maior robustês dos resultados\n",
+    "\n",
+    "\n",
+    "- Como já discutido anteriormente, a adoção da métrica **balanced accuracy** ajudou a mitigar a questão do desbalanceamento de label no dataset\n",
+    "\n",
+    "\n",
+    "- Foi bastante interessante observar a melhora de performance obtida após a seleção de features utilizando o algoritmo **Boruta**. Outro ponto importante foi o tunning de hiper parâmetros que foi realizado em duas etapas: uma primeira com busca aleatória utilizando um espaço de busca mais amplo, seguido por uma busca baseada no algoritmo de Otimização Bayeseana (**Optuna**) para uma busca mais refinada\n",
+    "\n",
+    "\n",
+    "- Foram testados diversos tipos de modelos, desde os mais simples (KNN, Naive Bayes, Logistic Regression), passando pelo Voting Classifier até o modelo que faz muito sucesso no Kaggle (**LightGBM**). Foi observado que os modelos com maior complexidade e flexibilidade tiveram melhores resultados (exceção do Random Forest que ficou abaixo do KNN). Um ponto bastante interessante foi a boa performance do Voting Classifier, que realiza um ensemble de modelos com características diferentes (que possuem dificuldades e especialidades diferentes) e proporcionou um resultado bastante competitivo com os outros modelos\n",
+    "\n",
+    "\n",
+    "- O modelo **LightGBM** costuma ser um destaque em datasets tabulares graças a técnica do Gradient Boosting, que utiliza uma séria de preditores \"fracos\" em cadeia treinados para diminuir o erro preditivo do modelo anterior, e também devido a sua grande flexibilidade em relação a otimização de hiper parâmetros. Dado isso, não foi surpresa este modelo ter se destacado em relação a performance"
    ]
   }
  ],
@@ -27528,7 +27576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
